// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assert show exist Make same request every time 1`] = `
Array [
  Object {
    "name": "first",
    "type": "get",
  },
  Object {
    "args": Array [
      "id",
    ],
    "type": "apply",
  },
  Object {
    "name": "from",
    "type": "get",
  },
  Object {
    "args": Array [
      "tv_show",
    ],
    "type": "apply",
  },
  Object {
    "name": "where",
    "type": "get",
  },
  Object {
    "args": Array [
      Object {
        "tvdb_id": 5,
      },
    ],
    "type": "apply",
  },
]
`;

exports[`Assert show not exist Make same request every time 1`] = `
Array [
  Object {
    "name": "first",
    "type": "get",
  },
  Object {
    "args": Array [
      "id",
    ],
    "type": "apply",
  },
  Object {
    "name": "from",
    "type": "get",
  },
  Object {
    "args": Array [
      "tv_show",
    ],
    "type": "apply",
  },
  Object {
    "name": "where",
    "type": "get",
  },
  Object {
    "args": Array [
      Object {
        "tvdb_id": 5,
      },
    ],
    "type": "apply",
  },
]
`;

exports[`Filter out non existing shows 1`] = `
Array [
  Object {
    "name": "select",
    "type": "get",
  },
  Object {
    "args": Array [
      "id",
      "tvdb_id",
      "imdb_id",
    ],
    "type": "apply",
  },
  Object {
    "name": "from",
    "type": "get",
  },
  Object {
    "args": Array [
      "tv_show",
    ],
    "type": "apply",
  },
  Object {
    "name": "whereIn",
    "type": "get",
  },
  Object {
    "args": Array [
      "tvdb_id",
      Array [
        2,
        5,
      ],
    ],
    "type": "apply",
  },
]
`;

exports[`Find show Resolve a show 1`] = `
Object {
  "airsDayOfWeek": "Monday",
  "airsTime": "09:00 PM",
  "ended": true,
  "fanart": "fanart.jpg",
  "firstAired": "2016-03-15",
  "genre": Array [
    "Drama",
    "Action",
  ],
  "id": 5,
  "imdbId": "tt12345",
  "language": "en",
  "lastupdate": 1234567891,
  "name": "Dexter",
  "network": "AMC",
  "overview": "Something, somthing",
  "poster": "poster.jpg",
  "runtime": "60",
  "tvdbId": 2,
}
`;

exports[`Find show Resolve a show 2`] = `
Array [
  Object {
    "name": "first",
    "type": "get",
  },
  Object {
    "args": Array [
      "*",
    ],
    "type": "apply",
  },
  Object {
    "name": "from",
    "type": "get",
  },
  Object {
    "args": Array [
      "tv_show",
    ],
    "type": "apply",
  },
  Object {
    "name": "where",
    "type": "get",
  },
  Object {
    "args": Array [
      Object {
        "id": 5,
      },
    ],
    "type": "apply",
  },
]
`;

exports[`Update show 1`] = `
Array [
  Object {
    "args": Array [
      "tv_show",
    ],
    "type": "apply",
  },
  Object {
    "name": "update",
    "type": "get",
  },
  Object {
    "args": Array [
      Object {
        "airs_dayOfWeek": "Monday",
        "airs_time": "09:00 PM",
        "fanart": "fanart.jpg",
        "first_aired": "2016-03-15",
        "genre": "Drama|Action",
        "id": 5,
        "imdb_id": "tt12345",
        "language": "en",
        "lastupdate": 1234567891,
        "name": "Dexter",
        "network": "AMC",
        "overview": "Something, somthing",
        "poster": "poster.jpg",
        "runtime": 60,
        "status": "Continuing",
        "tvdb_id": 2,
      },
    ],
    "type": "apply",
  },
  Object {
    "name": "where",
    "type": "get",
  },
  Object {
    "args": Array [
      "id",
      5,
    ],
    "type": "apply",
  },
]
`;
